message-service-api/src/main/java/com/example/messageservice/error/UserNotFoundException.java
package com.example.messageservice.error;

public class UserNotFoundException extends RuntimeException {
    public UserNotFoundException() {
        super();
    }

    public UserNotFoundException(String message) {
        super(message);
    }
}
